--- a/src/index.css
+++ b/src/index.css
@@ -4,10 +4,10 @@ body {
   background-size: auto 100%;
   background-position: center center;
   background-repeat: no-repeat;
-  font-family: 'Roboto', sans-serif;
+  font-family: var(--roboto-regular);
   font-weight: 400;
   font-style: normal;
-  color: #111111;
+  color: var(--primary-black);
   width: 100%;
   height: 100vh;
   margin: 0;
